crates/cli/tests/snapshots/tasks_test__tasks__can_focus_for_a_project.snap
---
source: crates/cli/tests/tasks_test.rs
expression: assert.output()
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Task             Command      Type        Preset      Toolchains                                Description                                         │
│────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│tasks:lint       eslint       build                   system                                                                                        │
│tasks:test       jest         test                    system                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
