crates/cli/tests/snapshots/tasks_test__tasks__no_tasks.snap
---
source: crates/cli/tests/tasks_test.rs
expression: assert.output()
---
│ INFO
│ No tasks exist. Have any been configured?
