crates/cli/tests/snapshots/tasks_test__tasks__no_tasks_for_a_project.snap
---
source: crates/cli/tests/tasks_test.rs
expression: assert.output()
---
│ INFO
│ There are no tasks for the project no-config
